Started porting project to Altera Quartus II
This is for the Terasic DE2 development board with a Cyclone II FPGA.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
+*~
 *.swp
+*.bak
 
+# Altera special files
+*.qws
+*.rpt
+/db/
+/incremental_db/
+/output_files/
+/timing/
+
+# Xilinx special files
 /iseconfig/*.xreport
-
 *.asy
 /*.bgn
 /*.bit
