Added RAM block from Altera Qsys and commented out missing signals
The design can now be synthesized from the top-level. However, it is
most certainly incomplete and the new RAM block has several signals that
did not exist under Xilinx so will need some more work.

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,21 @@
 # Altera special files
 *.qws
 *.rpt
+# HTML reports
+*.html
+# Block symbol file
+*.bsf
+# Component definitions
+*.cmp
+# Information for SOPC Builder
+*.sopcinfo
+# Generated RAM block
+/ram/
 /db/
 /incremental_db/
 /output_files/
 /timing/
+/.qsys_edit/
 
 # Xilinx special files
 /iseconfig/*.xreport
