--- a/top_level.qsf
+++ b/top_level.qsf
@@ -70,4 +70,16 @@ set_global_assignment -name VHDL_FILE IOExpansion.vhd
 set_global_assignment -name VHDL_FILE front_panel.vhd
 set_global_assignment -name VHDL_FILE cpu.vhd
 set_global_assignment -name VHDL_FILE control.vhd
+set_global_assignment -name VHDL_FILE alu.vhd
+set_global_assignment -name VHDL_TEST_BENCH_FILE test_alu.vhd
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS COMMAND_MACRO_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH alu -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME alu -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id alu
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME test_alu -section_id alu
+set_global_assignment -name EDA_TEST_BENCH_FILE test_alu.vhd -section_id alu
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_SETUP_SCRIPT run_test_alu.do -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_RUN_SCRIPT run_test_alu.do -section_id eda_simulation
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
