Added Verilog UART into project

--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,18 @@
 *.sopcinfo
 # Generated RAM block
 /ram/
+
 /db/
 /incremental_db/
 /simulation/
 /output_files/
 /timing/
 /.qsys_edit/
+
+# ModelSim files
+*.wlf
+wlf*
+transcript
 
 # Xilinx special files
 /iseconfig/*.xreport
