--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -11,4 +11,10 @@ jobs:
           .
           ./tests
         extra_args: "--check_syntax=true"
-        #github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload log results
+      uses: actions/upload-artifact@v2
+      with:
+        name: verible-log
+        path: verible-verilog-lint.log
