--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -1,5 +1,5 @@
 name: Verible Linter
-on: push
+on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload log results
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: verible-log
         path: verible-verilog-lint.log
